k8s/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: cloud-native-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloud-native-api

  template:
    metadata:
      labels:
        app: cloud-native-api

    spec:
      containers:
        - name: api

          image: cloud-native-api:v1

          imagePullPolicy: Never

          ports:
            - containerPort: 8000
