k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloud-native-worker
  namespace: cloud-native

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloud-native-worker

  template:
    metadata:
      labels:
        app: cloud-native-worker

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000

      containers:
        - name: worker

          image: cloud-native-api:v1
          imagePullPolicy: Never

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          command:
            - python
            - -m
            - app.worker.worker
