k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloud-native-api
  namespace: cloud-native

spec:
  selector:
    app: cloud-native-api

  ports:
    - port: 8000
      targetPort: 8000

  type: NodePort
